Remove custom scrollbar, add attribution, fixes

--- a/src/dark.css
+++ b/src/dark.css
@@ -59,50 +59,4 @@
   img.latexcenter {
     filter: invert(1) hue-rotate(180deg);
   }
-
-  ::-webkit-scrollbar {
-    width: 16px;
-    height: 16px;
-    cursor: default;
-  }
-  ::-webkit-scrollbar-button {
-    background-color: hsl(201deg, 5%, 40%);
-  }
-  ::-webkit-scrollbar-track {
-    background-color: hsl(201deg, 5%, 39%);
-  }
-  ::-webkit-scrollbar-track-piece {
-    background-color: hsl(201deg, 5%, 27%);
-  }
-  ::-webkit-scrollbar-thumb {
-    background-color: hsl(201deg, 5%, 40%);
-  }
-  ::-webkit-scrollbar-corner {
-    background-color: hsl(201deg, 5%, 39%);
-  }
-  ::-webkit-resizer {
-    background-color: hsl(201deg, 5%, 40%);
-  }
-
-  .CtxtMenu_InfoContent::-webkit-scrollbar {
-    all: unset;
-  }
-  .CtxtMenu_InfoContent::-webkit-scrollbar-button {
-    background-color: initial;
-  }
-  .CtxtMenu_InfoContent::-webkit-scrollbar-track {
-    background-color: initial;
-  }
-  .CtxtMenu_InfoContent::-webkit-scrollbar-track-piece {
-    background-color: initial;
-  }
-  .CtxtMenu_InfoContent::-webkit-scrollbar-thumb {
-    background-color: initial;
-  }
-  .CtxtMenu_InfoContent::-webkit-scrollbar-corner {
-    background-color: initial;
-  }
-  .CtxtMenu_InfoContent::-webkit-resizer {
-    background-color: initial;
-  }
 } /**/
